--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,37 +1,58 @@
 <index.html>
 <html lang="en">
+
 <head>
 <meta chargeset="UtF-8">
 <meta name="viewport"content="width=devi-width. inital-scale1">
-<title>Today'sData<title>
-<meta name="geo.region" content=kh
-<title>https rathanaphonwebsitecoin </title>
+<title>Data<title>
+<meta name="geo.region" content=
+<title>haed</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"><script type="text/javascript">(window.NREUM||(NREUM={})).init={ajax:{deny_list:["
+<head>
 <!-- Google Tag Manager -->
-
-<script> (function (w,d,s,1,i) (w[1]-[1]|| [];w[1].push({'gtm.start':
-
--new Date().getTime(), event: 'gtm.js'));var f=d.getElementsByTagName(s)[0],
-
-j=d.createElement(s),dl=l!='dataLayer'?'1='+1:;j.async=true;j.src=
-
-https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore (3,f):
-
--})(window,document, 'script', 'dataLayer', 'G-ZFDZXNBY1D');</script>
-
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T5M4CWT');</script>
 <!-- End Google Tag Manager -->
-</nav>class="navbar navbar-expand-lg bg-primary navbar-dark">-
+<!-- Google 
+</nav>class=" navbar navbar-expand-lg bg-primary navbar-dark ">
       </div>
-<title>hello analytics</title>
+<title>hello analytics Tuturials</title>
 <"main">
 </head>
 
-<body>
+<body>.    	<<main class="container-lg pt-4"> 
+							<p class="card-text">
 <script="https://cdn.jdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js
-<!-- Google Tag Manager (noscript)--> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-ZFDZXNBY1D')" -height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript)--> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=AW-10919038707')" -height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -- End Google Tag Manager (noscript) -->
 body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
 
 
 
