--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,15 +16,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-T5M4CWT');</script>
 <!-- End Google Tag Manager -->
-<!-- Google 
+
 </nav>class=" navbar navbar-expand-lg bg-primary navbar-dark ">
       </div>
 <title>hello analytics Tuturials</title>
 <"main">
 </head>
 
-<body>.    	<<main class="container-lg pt-4"> 
-							<p class="card-text">
+<body>.    
+<<main class="container-lg pt-4"> 
+							
 <script="https://cdn.jdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js
 <!-- Google Tag Manager (noscript)--> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=AW-10919038707')" -height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -- End Google Tag Manager (noscript) -->
 body>
